[package]
name = "teloxide-multibot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
axum = "0.6"
futures = "0.3.30"
reqwest = "0.11.23"
serde_json = "1.0.108"
teloxide = { version = "0.12.2", features = ["macros", "webhooks-axum", "ctrlc_handler"] }
teloxide-core = "0.9.1"
tokio = { version =  "1.35.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.5.0", features = ["trace"] }
pretty_env_logger = "0.4.0"
